[package]
name = "todo-gtk"
version = "0.1.0"
authors = ["Weslei Juan Moser Pereira <wesleimsr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
cascade = "1.0.0"
fomat-macros = "0.3.1"
gio = "0.9.1"
glib = "0.10.3"
gtk = "0.9.2"
slotmap = "1.0.3"
xdg = "2.2.0"
